--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.196",
     "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.4.5",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
@@ -29,6 +31,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mongoose": "^7.4.1"
   }
 }
