--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
       "module": "NodeNext",
-      "moduleResolution": "node",
+      "moduleResolution": "nodeNext",
       "baseUrl": "src",
       "outDir": "dist",
       "sourceMap": true,
